--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@uiw/react-codemirror": "^4.25.2",
+    "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^12.23.22",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-live": "^4.1.8",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
